Add Banner Section

--- a/index.html
+++ b/index.html
@@ -54,6 +54,17 @@
         </div>
       </div>
     </nav>
+    <!-- Banner Section Start -->
+     <div class="bg-linear-to-r from-[#013223] from-0% via-[#006747] via-50% to-[#013223] to-100% py-5">
+      <div class="text-white font-hind">
+        <div class="text-center">
+          <img class="w-[90px] mx-auto" src="./assets/logo-dark.png" alt="logo-dark" >
+          <h1 class="font-extrabold text-[40px] my-3">জরুরি সেবা ডিরেক্টরি</h1>
+          <p class="font-semibold text-[20px]">Government Emergency Services at Your Fingertip – A Project by Government of the People’s Republic of Bangladesh</p>
+        </div>
+      </div>
+     </div>
+    <!-- Banner Section End -->
   </header>
   <!-- Header Section End -->
 </body>
