--- a/index.html
+++ b/index.html
@@ -67,5 +67,32 @@
     <!-- Banner Section End -->
   </header>
   <!-- Header Section End -->
+  <!-- Main Section Start -->
+   <main>
+    <section class="max-w-[1800px] mx-auto grid grid-cols-12 gap-[30px] mt-[48px] mb-[86px]">
+      <div class="col-span-9 gap-[30px] grid grid-cols-3">
+        <div class="rounded-[12px] bg-white p-8 drop-shadow-[0_2px_3px_rgba(0,0,0,0.15)]">
+          <div class="flex justify-between items-center mb-4">
+            <div class="w-[60px] h-[60px] bg-[#FFE3E2] rounded-2xl flex items-center justify-center"> 
+              <img class="w-[32px]" src="./assets/emergency.png" alt="Emergency" >
+            </div>
+            <img class="cursor-pointer" src="./assets/HeartVector.png" alt="Heart" >
+          </div>
+          <div class="">
+            <h2 class="font-hind font-bold text-2xl">জাতীয় জরুরি সেবা</h2>
+            <p class="font-roboto text-[18px] text-[#5C5C5C] mb-6">National Emergency</p>
+            <h3 class="font-roboto text-[32px] font-bold mb-1">999</h3>
+            <p class="font-hind rounded-full bg-[#F2F2F2] px-4 py-2 text-[#5C5C5C] mb-[30px] inline-block text-[18px] font-normal">সার্বজনীন</p>
+            <div class="flex gap-2 font-roboto">
+              <button class="cursor-pointer w-full justify-center flex items-center border border-[#D4D6D5] rounded-lg p-[10px] hover:bg-black hover:text-white transition duration-250 ease-out "><img class="mr-[6px]" src="./assets/copy.png" alt="Copy" > Copy</button>
+              <button class="cursor-pointer w-full justify-center text-white flex items-center bg-[#00A63E] hover:bg-[#008C3E] rounded-lg p-[10px] transition duration-250 ease-out "><img class="mr-[6px]" src="./assets/call.png" alt="Call" > Call</button>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="col-span-3 bg-red-700 h-9"></div>
+    </section>
+   </main>
+  <!-- Main Section End -->
 </body>
 </html>
