Add History Section

--- a/index.html
+++ b/index.html
@@ -89,8 +89,176 @@
             </div>
           </div>
         </div>
+        <div class="rounded-[12px] bg-white p-8 drop-shadow-[0_2px_3px_rgba(0,0,0,0.15)]">
+          <div class="flex justify-between items-center mb-4">
+            <div class="w-[60px] h-[60px] bg-[#FFE3E2] rounded-2xl flex items-center justify-center"> 
+              <img class="w-[32px]" src="./assets/emergency.png" alt="Emergency" >
+            </div>
+            <img class="cursor-pointer" src="./assets/HeartVector.png" alt="Heart" >
+          </div>
+          <div class="">
+            <h2 class="font-hind font-bold text-2xl">জাতীয় জরুরি সেবা</h2>
+            <p class="font-roboto text-[18px] text-[#5C5C5C] mb-6">National Emergency</p>
+            <h3 class="font-roboto text-[32px] font-bold mb-1">999</h3>
+            <p class="font-hind rounded-full bg-[#F2F2F2] px-4 py-2 text-[#5C5C5C] mb-[30px] inline-block text-[18px] font-normal">সার্বজনীন</p>
+            <div class="flex gap-2 font-roboto">
+              <button class="cursor-pointer w-full justify-center flex items-center border border-[#D4D6D5] rounded-lg p-[10px] hover:bg-black hover:text-white transition duration-250 ease-out "><img class="mr-[6px]" src="./assets/copy.png" alt="Copy" > Copy</button>
+              <button class="cursor-pointer w-full justify-center text-white flex items-center bg-[#00A63E] hover:bg-[#008C3E] rounded-lg p-[10px] transition duration-250 ease-out "><img class="mr-[6px]" src="./assets/call.png" alt="Call" > Call</button>
+            </div>
+          </div>
+        </div>
+        <div class="rounded-[12px] bg-white p-8 drop-shadow-[0_2px_3px_rgba(0,0,0,0.15)]">
+          <div class="flex justify-between items-center mb-4">
+            <div class="w-[60px] h-[60px] bg-[#FFE3E2] rounded-2xl flex items-center justify-center"> 
+              <img class="w-[32px]" src="./assets/emergency.png" alt="Emergency" >
+            </div>
+            <img class="cursor-pointer" src="./assets/HeartVector.png" alt="Heart" >
+          </div>
+          <div class="">
+            <h2 class="font-hind font-bold text-2xl">জাতীয় জরুরি সেবা</h2>
+            <p class="font-roboto text-[18px] text-[#5C5C5C] mb-6">National Emergency</p>
+            <h3 class="font-roboto text-[32px] font-bold mb-1">999</h3>
+            <p class="font-hind rounded-full bg-[#F2F2F2] px-4 py-2 text-[#5C5C5C] mb-[30px] inline-block text-[18px] font-normal">সার্বজনীন</p>
+            <div class="flex gap-2 font-roboto">
+              <button class="cursor-pointer w-full justify-center flex items-center border border-[#D4D6D5] rounded-lg p-[10px] hover:bg-black hover:text-white transition duration-250 ease-out "><img class="mr-[6px]" src="./assets/copy.png" alt="Copy" > Copy</button>
+              <button class="cursor-pointer w-full justify-center text-white flex items-center bg-[#00A63E] hover:bg-[#008C3E] rounded-lg p-[10px] transition duration-250 ease-out "><img class="mr-[6px]" src="./assets/call.png" alt="Call" > Call</button>
+            </div>
+          </div>
+        </div>
+        <div class="rounded-[12px] bg-white p-8 drop-shadow-[0_2px_3px_rgba(0,0,0,0.15)]">
+          <div class="flex justify-between items-center mb-4">
+            <div class="w-[60px] h-[60px] bg-[#FFE3E2] rounded-2xl flex items-center justify-center"> 
+              <img class="w-[32px]" src="./assets/emergency.png" alt="Emergency" >
+            </div>
+            <img class="cursor-pointer" src="./assets/HeartVector.png" alt="Heart" >
+          </div>
+          <div class="">
+            <h2 class="font-hind font-bold text-2xl">জাতীয় জরুরি সেবা</h2>
+            <p class="font-roboto text-[18px] text-[#5C5C5C] mb-6">National Emergency</p>
+            <h3 class="font-roboto text-[32px] font-bold mb-1">999</h3>
+            <p class="font-hind rounded-full bg-[#F2F2F2] px-4 py-2 text-[#5C5C5C] mb-[30px] inline-block text-[18px] font-normal">সার্বজনীন</p>
+            <div class="flex gap-2 font-roboto">
+              <button class="cursor-pointer w-full justify-center flex items-center border border-[#D4D6D5] rounded-lg p-[10px] hover:bg-black hover:text-white transition duration-250 ease-out "><img class="mr-[6px]" src="./assets/copy.png" alt="Copy" > Copy</button>
+              <button class="cursor-pointer w-full justify-center text-white flex items-center bg-[#00A63E] hover:bg-[#008C3E] rounded-lg p-[10px] transition duration-250 ease-out "><img class="mr-[6px]" src="./assets/call.png" alt="Call" > Call</button>
+            </div>
+          </div>
+        </div>
+        <div class="rounded-[12px] bg-white p-8 drop-shadow-[0_2px_3px_rgba(0,0,0,0.15)]">
+          <div class="flex justify-between items-center mb-4">
+            <div class="w-[60px] h-[60px] bg-[#FFE3E2] rounded-2xl flex items-center justify-center"> 
+              <img class="w-[32px]" src="./assets/emergency.png" alt="Emergency" >
+            </div>
+            <img class="cursor-pointer" src="./assets/HeartVector.png" alt="Heart" >
+          </div>
+          <div class="">
+            <h2 class="font-hind font-bold text-2xl">জাতীয় জরুরি সেবা</h2>
+            <p class="font-roboto text-[18px] text-[#5C5C5C] mb-6">National Emergency</p>
+            <h3 class="font-roboto text-[32px] font-bold mb-1">999</h3>
+            <p class="font-hind rounded-full bg-[#F2F2F2] px-4 py-2 text-[#5C5C5C] mb-[30px] inline-block text-[18px] font-normal">সার্বজনীন</p>
+            <div class="flex gap-2 font-roboto">
+              <button class="cursor-pointer w-full justify-center flex items-center border border-[#D4D6D5] rounded-lg p-[10px] hover:bg-black hover:text-white transition duration-250 ease-out "><img class="mr-[6px]" src="./assets/copy.png" alt="Copy" > Copy</button>
+              <button class="cursor-pointer w-full justify-center text-white flex items-center bg-[#00A63E] hover:bg-[#008C3E] rounded-lg p-[10px] transition duration-250 ease-out "><img class="mr-[6px]" src="./assets/call.png" alt="Call" > Call</button>
+            </div>
+          </div>
+        </div>
+        <div class="rounded-[12px] bg-white p-8 drop-shadow-[0_2px_3px_rgba(0,0,0,0.15)]">
+          <div class="flex justify-between items-center mb-4">
+            <div class="w-[60px] h-[60px] bg-[#FFE3E2] rounded-2xl flex items-center justify-center"> 
+              <img class="w-[32px]" src="./assets/emergency.png" alt="Emergency" >
+            </div>
+            <img class="cursor-pointer" src="./assets/HeartVector.png" alt="Heart" >
+          </div>
+          <div class="">
+            <h2 class="font-hind font-bold text-2xl">জাতীয় জরুরি সেবা</h2>
+            <p class="font-roboto text-[18px] text-[#5C5C5C] mb-6">National Emergency</p>
+            <h3 class="font-roboto text-[32px] font-bold mb-1">999</h3>
+            <p class="font-hind rounded-full bg-[#F2F2F2] px-4 py-2 text-[#5C5C5C] mb-[30px] inline-block text-[18px] font-normal">সার্বজনীন</p>
+            <div class="flex gap-2 font-roboto">
+              <button class="cursor-pointer w-full justify-center flex items-center border border-[#D4D6D5] rounded-lg p-[10px] hover:bg-black hover:text-white transition duration-250 ease-out "><img class="mr-[6px]" src="./assets/copy.png" alt="Copy" > Copy</button>
+              <button class="cursor-pointer w-full justify-center text-white flex items-center bg-[#00A63E] hover:bg-[#008C3E] rounded-lg p-[10px] transition duration-250 ease-out "><img class="mr-[6px]" src="./assets/call.png" alt="Call" > Call</button>
+            </div>
+          </div>
+        </div>
+        <div class="rounded-[12px] bg-white p-8 drop-shadow-[0_2px_3px_rgba(0,0,0,0.15)]">
+          <div class="flex justify-between items-center mb-4">
+            <div class="w-[60px] h-[60px] bg-[#FFE3E2] rounded-2xl flex items-center justify-center"> 
+              <img class="w-[32px]" src="./assets/emergency.png" alt="Emergency" >
+            </div>
+            <img class="cursor-pointer" src="./assets/HeartVector.png" alt="Heart" >
+          </div>
+          <div class="">
+            <h2 class="font-hind font-bold text-2xl">জাতীয় জরুরি সেবা</h2>
+            <p class="font-roboto text-[18px] text-[#5C5C5C] mb-6">National Emergency</p>
+            <h3 class="font-roboto text-[32px] font-bold mb-1">999</h3>
+            <p class="font-hind rounded-full bg-[#F2F2F2] px-4 py-2 text-[#5C5C5C] mb-[30px] inline-block text-[18px] font-normal">সার্বজনীন</p>
+            <div class="flex gap-2 font-roboto">
+              <button class="cursor-pointer w-full justify-center flex items-center border border-[#D4D6D5] rounded-lg p-[10px] hover:bg-black hover:text-white transition duration-250 ease-out "><img class="mr-[6px]" src="./assets/copy.png" alt="Copy" > Copy</button>
+              <button class="cursor-pointer w-full justify-center text-white flex items-center bg-[#00A63E] hover:bg-[#008C3E] rounded-lg p-[10px] transition duration-250 ease-out "><img class="mr-[6px]" src="./assets/call.png" alt="Call" > Call</button>
+            </div>
+          </div>
+        </div>
+        <div class="rounded-[12px] bg-white p-8 drop-shadow-[0_2px_3px_rgba(0,0,0,0.15)]">
+          <div class="flex justify-between items-center mb-4">
+            <div class="w-[60px] h-[60px] bg-[#FFE3E2] rounded-2xl flex items-center justify-center"> 
+              <img class="w-[32px]" src="./assets/emergency.png" alt="Emergency" >
+            </div>
+            <img class="cursor-pointer" src="./assets/HeartVector.png" alt="Heart" >
+          </div>
+          <div class="">
+            <h2 class="font-hind font-bold text-2xl">জাতীয় জরুরি সেবা</h2>
+            <p class="font-roboto text-[18px] text-[#5C5C5C] mb-6">National Emergency</p>
+            <h3 class="font-roboto text-[32px] font-bold mb-1">999</h3>
+            <p class="font-hind rounded-full bg-[#F2F2F2] px-4 py-2 text-[#5C5C5C] mb-[30px] inline-block text-[18px] font-normal">সার্বজনীন</p>
+            <div class="flex gap-2 font-roboto">
+              <button class="cursor-pointer w-full justify-center flex items-center border border-[#D4D6D5] rounded-lg p-[10px] hover:bg-black hover:text-white transition duration-250 ease-out "><img class="mr-[6px]" src="./assets/copy.png" alt="Copy" > Copy</button>
+              <button class="cursor-pointer w-full justify-center text-white flex items-center bg-[#00A63E] hover:bg-[#008C3E] rounded-lg p-[10px] transition duration-250 ease-out "><img class="mr-[6px]" src="./assets/call.png" alt="Call" > Call</button>
+            </div>
+          </div>
+        </div>
+        <div class="rounded-[12px] bg-white p-8 drop-shadow-[0_2px_3px_rgba(0,0,0,0.15)]">
+          <div class="flex justify-between items-center mb-4">
+            <div class="w-[60px] h-[60px] bg-[#FFE3E2] rounded-2xl flex items-center justify-center"> 
+              <img class="w-[32px]" src="./assets/emergency.png" alt="Emergency" >
+            </div>
+            <img class="cursor-pointer" src="./assets/HeartVector.png" alt="Heart" >
+          </div>
+          <div class="">
+            <h2 class="font-hind font-bold text-2xl">জাতীয় জরুরি সেবা</h2>
+            <p class="font-roboto text-[18px] text-[#5C5C5C] mb-6">National Emergency</p>
+            <h3 class="font-roboto text-[32px] font-bold mb-1">999</h3>
+            <p class="font-hind rounded-full bg-[#F2F2F2] px-4 py-2 text-[#5C5C5C] mb-[30px] inline-block text-[18px] font-normal">সার্বজনীন</p>
+            <div class="flex gap-2 font-roboto">
+              <button class="cursor-pointer w-full justify-center flex items-center border border-[#D4D6D5] rounded-lg p-[10px] hover:bg-black hover:text-white transition duration-250 ease-out "><img class="mr-[6px]" src="./assets/copy.png" alt="Copy" > Copy</button>
+              <button class="cursor-pointer w-full justify-center text-white flex items-center bg-[#00A63E] hover:bg-[#008C3E] rounded-lg p-[10px] transition duration-250 ease-out "><img class="mr-[6px]" src="./assets/call.png" alt="Call" > Call</button>
+            </div>
+          </div>
+        </div>
       </div>
-      <div class="col-span-3 bg-red-700 h-9"></div>
+      <div class="col-span-3 rounded-[12px] bg-white p-6 drop-shadow-[0_2px_3px_rgba(0,0,0,0.15)]">
+        <div class="flex justify-between items-center mb-4">
+          <div class="flex gap-2 font-roboto text-xl font-medium items-center">
+            <img src="./assets/clock.png" alt="clock" class="w-[24px] h-[24px]" >
+            <p>Call History</p>
+          </div>
+          <div class="bg-[#00A63E] py-3.5 px-9 rounded-[50px] text-white font-inter font-semibold">
+            <p>Clear</p>
+          </div>
+        </div>
+        <div class="p-4 bg-[#FAFAFA] rounded-[8px] flex justify-between items-center mb-2">
+          <div class="">
+            <h2 class="font-hind font-semibold text-[18px]">জাতীয় জরুরি সেবা</h2>
+            <p class="font-roboto text-[18px] text-[#5C5C5C] mb-6">999</p>
+          </div>
+          <p class="font-roboto text-[16px] text-black mb-6">11:36:58 AM</p>
+        </div>
+        <div class="p-4 bg-[#FAFAFA] rounded-[8px] flex justify-between items-center mb-2">
+          <div class="">
+            <h2 class="font-hind font-semibold text-[18px]">জাতীয় জরুরি সেবা</h2>
+            <p class="font-roboto text-[18px] text-[#5C5C5C] mb-6">999</p>
+          </div>
+          <p class="font-roboto text-[16px] text-black mb-6">11:36:58 AM</p>
+        </div>
+      </div>
     </section>
    </main>
   <!-- Main Section End -->
