Update HTML Code

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
   <!-- Header Section End -->
   <!-- Main Section Start -->
   <main>
-    <section class="max-w-[1800px] mx-auto grid grid-cols-1 lg:grid-cols-12 gap-[30px] mt-[48px] mb-[86px] px-8">
+    <section class="max-w-[1800px] mx-auto grid grid-cols-1 lg:grid-cols-12 gap-[30px] mt-[48px] pb-[86px] px-8">
       <div class="lg:col-span-9 grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-[30px]">
         <div class="rounded-[12px] bg-white p-8 drop-shadow-[0_2px_3px_rgba(0,0,0,0.15)]">
           <div class="flex justify-between items-center mb-4">
@@ -227,12 +227,12 @@
             <img class="cursor-pointer vectorHeart" src="./assets/HeartVector.png" alt="Heart">
           </div>
           <div class="">
-            <h2 class="font-hind font-bold text-2xl">জাতীয় জরুরি সেবা</h2>
-            <p class="font-roboto text-[18px] text-[#5C5C5C] mb-6">National Emergency</p>
-            <h3 class="font-roboto text-[32px] font-bold mb-1">999</h3>
+            <h2 class="font-hind font-bold text-2xl">বিদ্যুৎ বিভ্রাট</h2>
+            <p class="font-roboto text-[18px] text-[#5C5C5C] mb-6">Electricity Outage</p>
+            <h3 class="font-roboto text-[32px] font-bold mb-1">16216</h3>
             <p
               class="font-hind rounded-full bg-[#F2F2F2] px-4 py-2 text-[#5C5C5C] mb-[30px] inline-block text-[18px] font-normal">
-              সার্বজনীন</p>
+              বিদ্যুৎ</p>
             <div class="flex gap-2 font-roboto">
               <button
                 class="copy-btn cursor-pointer w-full justify-center flex items-center border border-[#D4D6D5] rounded-lg p-[10px] hover:bg-black hover:text-white transition duration-250 ease-out "><img
@@ -246,17 +246,17 @@
         <div class="rounded-[12px] bg-white p-8 drop-shadow-[0_2px_3px_rgba(0,0,0,0.15)]">
           <div class="flex justify-between items-center mb-4">
             <div class="w-[60px] h-[60px] bg-[#FFE3E2] rounded-2xl flex items-center justify-center">
-              <img class="w-[32px]" src="./assets/emergency.png" alt="Emergency">
+              <img class="w-[32px]" src="./assets/brac.png" alt="Brac">
             </div>
             <img class="cursor-pointer vectorHeart" src="./assets/HeartVector.png" alt="Heart">
           </div>
           <div class="">
-            <h2 class="font-hind font-bold text-2xl">জাতীয় জরুরি সেবা</h2>
-            <p class="font-roboto text-[18px] text-[#5C5C5C] mb-6">National Emergency</p>
-            <h3 class="font-roboto text-[32px] font-bold mb-1">999</h3>
+            <h2 class="font-hind font-bold text-2xl">ব্র্যাক</h2>
+            <p class="font-roboto text-[18px] text-[#5C5C5C] mb-6">Brac</p>
+            <h3 class="font-roboto text-[32px] font-bold mb-1">16445</h3>
             <p
               class="font-hind rounded-full bg-[#F2F2F2] px-4 py-2 text-[#5C5C5C] mb-[30px] inline-block text-[18px] font-normal">
-              সার্বজনীন</p>
+              এনজিও</p>
             <div class="flex gap-2 font-roboto">
               <button
                 class="copy-btn cursor-pointer w-full justify-center flex items-center border border-[#D4D6D5] rounded-lg p-[10px] hover:bg-black hover:text-white transition duration-250 ease-out "><img
@@ -270,17 +270,17 @@
         <div class="rounded-[12px] bg-white p-8 drop-shadow-[0_2px_3px_rgba(0,0,0,0.15)]">
           <div class="flex justify-between items-center mb-4">
             <div class="w-[60px] h-[60px] bg-[#FFE3E2] rounded-2xl flex items-center justify-center">
-              <img class="w-[32px]" src="./assets/emergency.png" alt="Emergency">
+              <img class="w-[32px]" src="./assets/Bangladesh-Railway.png" alt="Bangladesh-Railway">
             </div>
             <img class="cursor-pointer vectorHeart" src="./assets/HeartVector.png" alt="Heart">
           </div>
           <div class="">
-            <h2 class="font-hind font-bold text-2xl">জাতীয় জরুরি সেবা</h2>
-            <p class="font-roboto text-[18px] text-[#5C5C5C] mb-6">National Emergency</p>
-            <h3 class="font-roboto text-[32px] font-bold mb-1">999</h3>
+            <h2 class="font-hind font-bold text-2xl">বাংলাদেশ রেলওয়ে</h2>
+            <p class="font-roboto text-[18px] text-[#5C5C5C] mb-6">Bangladesh Railway</p>
+            <h3 class="font-roboto text-[32px] font-bold mb-1">163</h3>
             <p
               class="font-hind rounded-full bg-[#F2F2F2] px-4 py-2 text-[#5C5C5C] mb-[30px] inline-block text-[18px] font-normal">
-              সার্বজনীন</p>
+              পরিবহন</p>
             <div class="flex gap-2 font-roboto">
               <button
                 class="copy-btn cursor-pointer w-full justify-center flex items-center border border-[#D4D6D5] rounded-lg p-[10px] hover:bg-black hover:text-white transition duration-250 ease-out "><img
